stuck on getting user input data and multiplying by correct conversion factor then displaying result

--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@ body {
     font-family: Times, "Times New Roman", Georgia, serif;
 }
 
+.initial {
+    padding-bottom: 50px;
+    border: 3px solid red;
+}
+
+.final {
+    padding-bottom: 50px;
+    border: 3px solid blue;
+}
+
